@@ -1,5 +1,6 @@
  * Correction du type de token OTP #863
  * Correction de l'ouverture automatique de l'invite biométrique #862
  * Correction du retour dans les paramètres d'apparence #865
+ * Correction du changement d'orientation dans les paramètres #872
  * Modification des unités de mémoire en MiB #851
  * Petits changements #642
